--- a/_posts/posts/CPDS/2025-09-15-CPDS.markdown
+++ b/_posts/posts/CPDS/2025-09-15-CPDS.markdown
@@ -5,6 +5,9 @@ date:   2025-09-16 12:00:00 +0200
 preview: "/images/CPDS/image.png"
 categories: post
 permalink: post/CPDS
+
+published: false
+
 ---
 
 This are some of my notes for CPDS. 
