--- a/_posts/posts/GPR/2025-09-15-GPR.markdown
+++ b/_posts/posts/GPR/2025-09-15-GPR.markdown
@@ -5,6 +5,9 @@ date:   2025-09-15 12:00:00 +0200
 preview: "/images/gpr/gpr.png"
 categories: post
 permalink: post/GPR
+
+published: false
+
 ---
 
 This are some of my notes for Geometry Processing. 
